F-dependency-injections-name-resolver: multiple dbcontext; store sample db;

--- a/tests/xCore/xCore.csproj
+++ b/tests/xCore/xCore.csproj
@@ -54,6 +54,7 @@
 		<ProjectReference Include="..\..\src\modules\Data.EF.MySql\Data.EF.MySql.csproj" />
 		<ProjectReference Include="..\..\src\modules\Data.EF.SQLite\Data.EF.SQLite.csproj" />
 		<ProjectReference Include="..\..\src\modules\Data.EF.SqlServer\Data.EF.SqlServer.csproj" />
+		<ProjectReference Include="..\..\src\modules\Data.FileSystem\Data.FileSystem.csproj" />
 		<ProjectReference Include="..\..\src\modules\Data\Data.csproj" />
 		<ProjectReference Include="..\..\src\modules\HealthCheck\HealthCheck.csproj" />
 		<ProjectReference Include="..\..\src\modules\Message\Message.csproj" />
