ICarter on Base extensions; move diagnostic api in Diagnostic module

--- a/samples/web/web.csproj
+++ b/samples/web/web.csproj
@@ -34,6 +34,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Code\" />
+    <Folder Include="Controllers\" />
     <Folder Include="Extensions\" />
     <Folder Include="Files\Entity\" />
   </ItemGroup>
