--- a/src/modules/Diagnostic/Diagnostic.csproj
+++ b/src/modules/Diagnostic/Diagnostic.csproj
@@ -22,6 +22,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\..\core\core.csproj" />
+		<ProjectReference Include="..\Data.Cache\Data.Cache.csproj" />
 		<ProjectReference Include="..\ExtensionBase\ExtensionBase.csproj" />
 		<PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.2.22" />
 		<PackageReference Include="MiniProfiler.EntityFrameworkCore" Version="4.2.22" />
