ws.core.cli: json-schema generator; Spa: remove SSR;

--- a/src/modules/Data.Cache.Redis/Data.Cache.Redis.csproj
+++ b/src/modules/Data.Cache.Redis/Data.Cache.Redis.csproj
@@ -13,6 +13,7 @@
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageReleaseNotes>.netcore 6</PackageReleaseNotes>
     <PackageTags></PackageTags>
+	<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>	  
   </PropertyGroup>
 
   <PropertyGroup>
