--- a/src/modules/Diagnostic/Diagnostic.csproj
+++ b/src/modules/Diagnostic/Diagnostic.csproj
@@ -14,6 +14,7 @@
 		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
 		<PackageReleaseNotes>Mini-profiler; HttpLogging</PackageReleaseNotes>
 		<PackageTags></PackageTags>
+		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>		
 	</PropertyGroup>
 
 	<PropertyGroup>
