Cors; Mongo; ImageProcessor; DistributedCache

--- a/src/modules/ImageProcessor/ImageProcessor.csproj
+++ b/src/modules/ImageProcessor/ImageProcessor.csproj
@@ -12,6 +12,8 @@
 		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
 		<PackageReleaseNotes>Image processor extensions using SixLabors.ImageSharp.Web</PackageReleaseNotes>
 		<PackageTags>image processor</PackageTags>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>		
 		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>		
 	</PropertyGroup>
 
