--- a/src/modules/Api/Api.csproj
+++ b/src/modules/Api/Api.csproj
@@ -14,6 +14,7 @@
 		<PackageTags></PackageTags>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -22,9 +23,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Hellang.Middleware.ProblemDetails" Version="6.4.2" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
 	</ItemGroup>
 
 	<ItemGroup>
