Stopping Visual Studio from generating a launchsettings.json file: NoDefaultLaunchSettingsFile

--- a/src/core/core.csproj
+++ b/src/core/core.csproj
@@ -15,7 +15,8 @@
 		<PackageReleaseNotes>Expose app info</PackageReleaseNotes>
 		<PackageTags></PackageTags>
 		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>		
+		<Nullable>enable</Nullable>
+		<NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile>
 	</PropertyGroup>
 
 	<PropertyGroup>
