--- a/src/modules/Api/Api.csproj
+++ b/src/modules/Api/Api.csproj
@@ -14,6 +14,7 @@
 		<PackageTags></PackageTags>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile>
 	</PropertyGroup>
 
 	<PropertyGroup>
