--- a/src/modules/Data.Cache.SqlServer/Data.Cache.SqlServer.csproj
+++ b/src/modules/Data.Cache.SqlServer/Data.Cache.SqlServer.csproj
@@ -16,6 +16,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+		<NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile>
 	</PropertyGroup>
 
 	<PropertyGroup>
