--- a/src/modules/Data/Data.csproj
+++ b/src/modules/Data/Data.csproj
@@ -15,6 +15,7 @@
 		<PackageTags></PackageTags>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile>
 	</PropertyGroup>
 
 	<PropertyGroup>
