--- a/src/modules/Diagnostic/Diagnostic.csproj
+++ b/src/modules/Diagnostic/Diagnostic.csproj
@@ -16,6 +16,7 @@
 		<PackageTags></PackageTags>
 		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
 		<EnableNETAnalyzers>true</EnableNETAnalyzers>
+		<NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile>
 	</PropertyGroup>
 
 	<PropertyGroup>
