--- a/src/extCore/Application/Application.csproj
+++ b/src/extCore/Application/Application.csproj
@@ -14,6 +14,7 @@
 		<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile>
 	</PropertyGroup>
 
 	<ItemGroup>
