--- a/src/modules/Cors/Cors.csproj
+++ b/src/modules/Cors/Cors.csproj
@@ -14,6 +14,7 @@
 		<PackageTags>cors, cors policies</PackageTags>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile>
 	</PropertyGroup>
 
 	<ItemGroup>
