--- a/src/modules/Data.EF.SQLite/Data.EF.SQLite.csproj
+++ b/src/modules/Data.EF.SQLite/Data.EF.SQLite.csproj
@@ -11,6 +11,7 @@
 	  <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
 	  <ImplicitUsings>enable</ImplicitUsings>
 	  <Nullable>enable</Nullable>
+	  <NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile>
   </PropertyGroup>
 
 	<PropertyGroup>
