--- a/src/tests/benchmark/benchmark.csproj
+++ b/src/tests/benchmark/benchmark.csproj
@@ -28,6 +28,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\..\web\web.csproj" />
 		<ProjectReference Include="..\x.core\x.core.csproj" />
 	</ItemGroup>
 
